# OpenMusic

./: .gitignore  CHANGELOG.md  README.md
backend/: .env.copy  README.md  pyproject.toml  requirements.txt
backend/music_mcp/: api_server.py  server.py
backend/music_mcp/config/: settings.py
backend/music_mcp/core/: __init__.py  contours.py  emotional_state.py  exceptions.py  intention_mapper.py  motif.py  prompts.py  rhythm_templates.py  scales.py  tension.py  validator.py  velocity_engine.py
backend/music_mcp/db/: __init__.py  database.py
backend/music_mcp/models/: __init__.py  composition_schema.py  db.py  music.py
backend/music_mcp/services/: __init__.py  composition_service.py  melody_generator.py  nvidia_client.py  session_service.py
backend/music_mcp/utils/: __init__.py  json_parser.py
backend/tests/integration/: test_composition_service.py
backend/tests/unit/: test_json_parser.py  test_music_models.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/v1/mcp/[tool]/: route.ts
frontend/src/components/ChatPanel/: ChatPanel.tsx  ChatPanel.types.ts  index.ts
frontend/src/components/GlobalConfig/: GlobalConfig.tsx  GlobalConfig.types.ts  index.ts
frontend/src/components/NoteInspector/: NoteInspector.tsx  NoteInspector.types.ts  index.ts
frontend/src/components/PianoRoll/: PianoRoll.tsx  PianoRoll.types.ts  index.ts
frontend/src/components/Sidebar/: Sidebar.tsx  Sidebar.types.ts  index.ts
frontend/src/components/TopBar/: TopBar.tsx  TopBar.types.ts
frontend/src/components/TransportBar/: TransportBar.tsx  TransportBar.types.ts  index.ts
frontend/src/hooks/: useAudioEngine.ts  useChatHistory.ts  useComposition.ts  useNoteSelection.ts  usePlayback.ts  useStudioState.ts
frontend/src/services/: compositionService.ts
frontend/src/types/: music.ts
